<resources>
    <string name="app_name">PasswordReminder</string>
    <string name="SOCIAL_MEDIA_TAB">SOCIAL MEDIA</string>
    <string name="EMAIL_TAB">EMAIL</string>
    <string name="DEVICE_TAB">DEVICE</string>
    <string name="choose_type">Choose</string>
    <string name="add_social_media_password">ADD SOCIAL MEDIA ACCOUNT</string>
    <string name="add_social_media_account">Add Social Media Account</string>
    <string name="fill_the_empty_areas">Fill the empty areas</string>
    <string name="add_email_account_password">ADD EMAIL ACCOUNT</string>
    <string name="add_email_account">Add Email Account</string>
    <string name="add_device_account_password">ADD DEVICE ACCOUNT</string>
    <string name="add_device_account">Add Device Account</string>
    <string name="passwords_didnt_matched">Passwords didn\'t matched.</string>
    <string name="onboarding_description">You can use PasswordReminder to keep your passwords in a safe place and to be not have to remember.</string>
    <string name="onboarding_master_password_title">…setting a master password</string>
    <string name="onboarding_master_password_description">To keep your passwords safe, you must set a master password to prevent other people to see your password</string>
    <string name="onboarding_add_new_password_title">…to add a new password</string>
    <string name="onboarding_add_new_password_description">You can add a password by tapping to plus button in right bottom of the page and select the category, then you can fill all the fields and click the button.</string>
    <string name="onboarding_see_your_passwords_title">…to see your passwords</string>
    <string name="onboarding_see_your_passwords_description">You can see a password by tapping on a password from list. For security reasons, your password appears and disappears after 5 seconds.</string>
    <string name="onboarding_delete_a_password_title">…to delete a password</string>
    <string name="onboarding_delete_a_password_description">Basically, long tap on a password, then you will see a dialog. Just tap on yes button.</string>
    <string name="finish">Finish</string>
    <string name="welcome_to_password_reminder">Welcome to Password Reminder</string>
    <string name="please_set_a_master_password_to_keep_your_passwords_safe">Please set a master password to keep your passwords safe.</string>
    <string name="please_enter_your_master_password_to_see_your_passwords">Please enter your master password to see your passwords.</string>
    <string name="delete_password_dialog_title">DELETE PASSWORD</string>
    <string name="do_you_want_to_delete_this_password">Do you want to delete this password?</string>
    <string name="there_is_no_password_in_device_accounts">There is no password in device accounts.</string>
    <string name="there_is_no_password_in_email_accounts">There is no password in email accounts.</string>
    <string name="there_is_no_password_in_social_media_accounts">There is no password in social media accounts.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="password_name">Password Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="banner_ad_unit_id">ca-app-pub-9406267063685764/8005392429</string>
    <string name="password_copied_to_your_clipboard">Password was copied to your clipboard.</string>
    <string name="passcode_count_4">Master password that you entered is wrong, you have 4 chances left.</string>
    <string name="passcode_count_3">Master password that you entered is wrong, you have 3 chances left.</string>
    <string name="passcode_count_2">Master password that you entered is wrong, you have 2 chances left.</string>
    <string name="passcode_count_1">Master password that you entered is wrong, you have 1 chances left.</string>
    <string name="passcode_count_0">Master password that you entered is wrong, your password datas were deleted permanently for security reasons.</string>
    <string name="computer">Computer</string>
    <string name="phone">Phone</string>
    <string name="tablet">Tablet</string>
    <string name="passwords_was_deleted">Because of you entered wrong passwords contuniously, your passwords was deleted. You cannot login again. Application is closing.</string>
</resources>
