<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_rounded_corners">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/delete_password_dialog_title"
        android:fontFamily="@font/vera"
        android:padding="20dp"
        android:background="@color/fabColor"
        android:textColor="#FFFFFF"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/do_you_want_to_delete_this_password"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <Button
            android:id="@+id/delete_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/yes"
            android:fontFamily="@font/vera"
            android:background="@color/rainbow_1"
            android:textColor="#FFFFFF"/>
        <Button
            android:id="@+id/cancel_delete_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/no"
            android:fontFamily="@font/vera"
            android:background="@color/colorGray"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
</LinearLayout>