<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_social_media_account_dialog_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_rounded_corners">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/fabColor"
        android:padding="20dp"
        android:gravity="center"
        >
            <TextView
                android:id="@+id/dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ADD SOCIAL MEDIA PASSWORD"
                android:fontFamily="@font/vera"
                android:textColor="#FFFFFF"
            />
            <ImageView
                android:id="@+id/close_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@drawable/close"
                android:layout_marginLeft="8dp"/>
    </LinearLayout>

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#333333"
        android:fontFamily="@font/vera"
        />
    <EditText
        android:id="@+id/password_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_name"
        android:fontFamily="@font/vera"
        android:background="@android:color/transparent"
        android:padding="8dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/password_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:fontFamily="@font/vera"
        android:background="@android:color/transparent"
        android:padding="8dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:fontFamily="@font/vera"
        android:background="@android:color/transparent"
        android:padding="8dp"
        android:layout_marginBottom="8dp"/>
    <Button
        android:id="@+id/add_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:hint="Add Social Media Account"
        android:fontFamily="@font/vera"
        android:background="@color/rainbow_2"
        android:textColor="#FFFFFF"/>
</LinearLayout>