<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:passcodeView="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E7F4"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/set_passcode_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vera"
            android:text="@string/welcome_to_password_reminder"
            android:textColor="#70000000"
            android:layout_weight="1.10"
            android:textSize="25sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vera"
            android:text="@string/please_set_a_master_password_to_keep_your_passwords_safe"
            android:textColor="#000000"
            android:layout_weight="0.30"
            android:textSize="12sp"
            android:gravity="center"/>

        <online.devliving.passcodeview.PasscodeView
            android:id="@+id/set_passcode_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            passcodeView:numDigits="4"
            passcodeView:digitRadius="16dp"
            passcodeView:digitInnerRadius="10dp"
            android:layout_weight="1.60"
            passcodeView:controlColor="#DDDEEB"
            passcodeView:controlColorActivated="#C7C8D8"
            passcodeView:digitColorFilled="#353437"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/check_passcode_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vera"
            android:text="@string/welcome_to_password_reminder"
            android:textColor="#70000000"
            android:layout_weight="1.10"
            android:textSize="25sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vera"
            android:text="@string/please_enter_your_master_password_to_see_your_passwords"
            android:textColor="#000000"
            android:layout_weight="0.30"
            android:textSize="12sp"
            android:gravity="center"/>
        <online.devliving.passcodeview.PasscodeView
            android:id="@+id/check_passcode_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            passcodeView:numDigits="4"
            passcodeView:digitRadius="16dp"
            passcodeView:digitInnerRadius="10dp"
            android:layout_weight="1.60"
            passcodeView:controlColor="#DDDEEB"
            passcodeView:controlColorActivated="#C7C8D8"
            passcodeView:digitColorFilled="#353437"
            />
    </LinearLayout>

</RelativeLayout>